--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ plugins {
 android {
     compileSdk 32
 
+    buildFeatures {
+        viewBinding true
+    }
+
     defaultConfig {
         applicationId "uz.hamroev.tabiiygeografiya"
         minSdk 21
@@ -37,7 +41,23 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //bouncy
+    implementation files('../libs/bouncy.aar')
+    // shrink click
+    implementation 'com.github.realpacific:click-shrink-effect:2.0'
+    // animation
+    implementation 'com.github.gayanvoice:android-animations:1.0.2'
+    //pdf viewer
+    implementation "com.dmitryborodin:pdfview-android:1.1.0"
+    //circle image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //lottie animation
+    implementation 'com.airbnb.android:lottie:4.2.2'
+
 }
